# fortran-logger

./: .gitignore  CMakeLists.txt  README.md  makefile
doc/: log_rotation.md
include/: macro.fi
src/: logger_mo.f90
test/: CMakeLists.txt  unit_test.f90  unit_test1.f90
test/bak/: CMakeLists_2024-10-10_1053.txt  CMakeLists_2024-10-10_1209.txt  CMakeLists_2024-10-10_1211.txt  CMakeLists_2024-10-10_1212.txt  unit_test1_2024-10-07_0806.f90  unit_test1_2024-10-07_0807.f90  unit_test1_2024-10-07_0808.f90  unit_test1_2024-10-07_0810.f90  unit_test1_2024-10-07_0812.f90  unit_test1_2024-10-07_0815.f90  unit_test1_2024-10-07_0816.f90  unit_test1_2024-10-07_0817.f90  unit_test1_2024-10-07_0818.f90  unit_test1_2024-10-07_0820.f90  unit_test1_2024-10-07_0822.f90  unit_test1_2024-10-07_0831.f90  unit_test1_2024-10-07_0832.f90  unit_test1_2024-10-07_0833.f90  unit_test1_2024-10-07_1406.f90  unit_test1_2024-10-07_1407.f90  unit_test1_2024-10-07_1408.f90  unit_test1_2024-10-07_1413.f90  unit_test1_2024-10-07_1423.f90  unit_test1_2024-10-07_1441.f90  unit_test1_2024-10-10_0951.f90  unit_test1_2024-10-10_0952.f90  unit_test1_2024-10-10_0955.f90  unit_test1_2024-10-10_1002.f90  unit_test1_2024-10-10_1003.f90  unit_test1_2024-10-10_1004.f90  unit_test1_2024-10-10_1005.f90  unit_test1_2024-10-10_1006.f90  unit_test1_2024-10-10_1007.f90  unit_test1_2024-10-10_1016.f90  unit_test1_2024-10-10_1020.f90  unit_test1_2024-10-10_1021.f90  unit_test1_2024-10-10_1024.f90  unit_test1_2024-10-10_1025.f90  unit_test1_2024-10-10_1029.f90  unit_test1_2024-10-10_1030.f90  (+60 more)
test_multithread/: a  makefile  (+2 more)
(+219 files in other folders)
